style: fixing header z-index

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,6 +5,7 @@ header {
     background-color: $yellow;
     transition: .6s all;
     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+    z-index: 1;
     
     .logo {
         font-size: 18px;
